# sized-types

./: .gitignore  .travis.yml  CHANGELOG.md  Hack.hs  Makefile  README  README.md  sized-types.cabal
Data/Sized/: Arith.hs  Fin.hs  IArray.hs  Ix.hs  Matrix.hs  Sampled.hs  Signed.hs  Sized.hs  TreeMatrix.hs  TypeNatInstances.hs  Unsigned.hs  Vector.hs
Data/Sized/Ix/: TH.hs
Data/Sized/QC/: Ix.hs  Matrix.hs  Signed.hs  TH.hs
Data/Sized/Sparse/: Matrix.hs  Matrix2.hs
qc/: QC.hs
ref/: sized-types-example1.stdout  sized-types-test1.stdout
test/: Example1.hs  Test1.hs
test/QC/: QC.hs
