Name:               sized-types
Version:            0.1
Synopsis:           Emulation of sized types in Haskell. 
		    Provided indices, matrixes, sparse matrixes, and signed and unsigned bit vectors.
		    .
		    &#169; 2009 The University of Kansas; BSD3 license.
Category:            Language
License:             BSD3
License-file:        LICENSE
Author:              Andy Gill, Tristan Bull
Maintainer:          Andy Gill <andygill@ku.edu>
Copyright:           (c) 2009 The University of Kansas
Homepage:            http://ittc.ku.edu/~andygill/sized-types.php
Stability:	     alpha
build-type: 	     Simple
Cabal-Version:       >= 1.6

Flag devel
  Description: Enable full development tree
  Default:     True

Library
  Build-Depends: base >= 4 && < 5, containers, array, template-haskell
  Exposed-modules:
       Data.Sized.Ix,
       Data.Sized.Matrix,
       Data.Sized.Sparse.Matrix,
       Data.Sized.Signed,
       Data.Sized.Unsigned
  Other-modules:
       Data.Sized.Ix.TH
  Ghc-Options:  -Wall

Executable sized-types-test1
    if flag(devel)
      Build-Depends: base, QuickCheck >= 2.0, template-haskell
      buildable: True
    else
      Build-depends: base
      buildable: False
    Main-Is:        Test1.hs
    Hs-Source-Dirs: ., test
    Ghc-Options:  -fhpc
